
3.95  2013-04-11
  - Added finished_ok method to Test::Mojo.
  - Improved Mojo::Transaction::WebSocket with support for status codes.
  - Improved documentation. (jberger, sri)
  - Improved tests.
  - Fixed a few small timing bugs in Mojo::Server::Daemon.

3.94  2013-04-08
  - Added is_hidden method to Mojolicious::Routes.
  - Removed deprecated start method from Mojolicious::Commands.
  - Improved documentation.
  - Improved tests.
  - Fixed small selector bug in get command.
  - Fixed small anchor bug in Mojolicious::Plugin::PODRenderer.

3.93  2013-04-05
  - Deprecated Mojo::IOLoop::Delay::end in favor of generated callbacks.
  - Improved Mojo::IOLoop::Delay to be able to generate callbacks that can
    capture all arguments.
  - Improved prefork command to allow -a and -L values below 1 second.
  - Improved documentation.
  - Improved tests.
  - Fixed multiple timing bugs in Mojo::IOLoop::Delay.

3.92  2013-04-03
  - Added monotonic clock support to make Mojolicious more resilient to time
    jumps.
  - Added steady_time function to Mojo::Util.
  - Removed deprecated namespace method from Mojolicious::Routes.
  - Removed deprecated base_tag helper.
  - Improved WebSocket send method to stringify objects. (jberger)
  - Improved version command to show required versions of optional
    dependencies.
  - Improved documentation.
  - Improved tests.
  - Fixed RFC 6901 compliance of Mojo::JSON::Pointer. (jberger, sri)
  - Fixed a few small Unicode bugs in get command.

3.91  2013-03-17
  - Improved bad charset handling in Mojo::DOM::HTML.
  - Improved documentation.
  - Improved tests.
  - Fixed HTTPS proxy support for blocking requests in Mojo::UserAgent.
  - Fixed support for RFC 2817 in Mojo::Message::Request.
  - Fixed whitespace bug in Mojo::DOM::HTML.
  - Fixed proxy detection bug in get command.

3.90  2013-03-14
  - Added direct array access for parsed parameters to Mojo::Parameters.
  - Added direct array access for path parts to Mojo::Path.