@@ -9,8 +9,8 @@ plan skip_all => 'Test::Pod::Coverage 1.04 required for this test!'
 
 # DEPRECATED in Rainbow!
 my @rainbow = (
-  qw(build_form_tx build_json_tx end form html_escape json post_form),
-  qw(post_form_ok post_json post_json_ok slurp_rel_file)
+  qw(build_form_tx build_json_tx end form json post_form post_form_ok),
+  qw(post_json post_json_ok)
 );
 
 # False positive constants
