@@ -1,6 +1,8 @@
 
 3.95  2013-04-11
   - Added finished_ok method to Test::Mojo.
+  - Removed deprecated slurp_rel_file method from Mojo::Home.
+  - Removed deprecated html_escape function from Mojo::Util.
   - Improved Mojo::Transaction::WebSocket with support for status codes.
   - Improved documentation. (jberger, sri)
   - Improved tests.
